Upgrade Java to 21 and Spring Boot to 3.2.12 using OpenRewrite
Co-authored-by: showpune <1787505+showpune@users.noreply.github.com>